--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeekFolio</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
+    <!--Header Section Starts-->
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo">
+
+                </div>
+                <div class="nav-list">
+                    
+                </div>
+            </div>
+
+        </nav>
+
+
+    </header>
     
 </body>
 </html>
