--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         <nav>
             <div class="nav-container">
                 <div class="logo">
-
+                    <img src="logo/logo-light.png" alt="GeekFolio Logo" height="25px">
                 </div>
                 <div class="nav-list">
-                    
+                    <ul type="none">
+                        <li>Home</li>
+                        <li>About us</li>
+                        <li>Contact us</li>
+                        <li>Login</li>
+                    </ul>
                 </div>
             </div>
 
