--- a/index.html
+++ b/index.html
@@ -24,10 +24,24 @@
                     </ul>
                 </div>
             </div>
-
-        </nav>
+            </nav>
     </header>
-    
+    <!-- Header Section Ends-->
+
+    <!-- Banner Section Starts-->
+    <section>
+        <div class="banner-container">
+            <div class="banner-info">
+                <h1>Better Design for <br> your digital products</h1>
+                <p>We are a creative institute which works based on web development <br> and always ready to serve you</p>
+                <button>Explore More</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/banner.png" alt="banner image" height="250px">
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
