--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!--Header Section Starts-->
+<!--Header Section Starts-->
     <header>
         <nav>
             <div class="nav-container">
@@ -26,22 +26,23 @@
             </div>
             </nav>
     </header>
-    <!-- Header Section Ends-->
+<!-- Header Section Ends-->
 
-    <!-- Banner Section Starts-->
+<!-- Banner Section Starts-->
     <section>
         <div class="banner-container">
             <div class="banner-info">
-                <h1>Better Design for <br> your digital products</h1>
-                <p>We are a creative institute which works based on web development <br> and always ready to serve you</p>
-                <button>Explore More</button>
+                <h1 style="font-size: 45px;">Better Design for <br> your digital products</h1>
+                <p style="font-size: 20px;">We are a creative institute which works based on web development <br> and always ready to serve you</p>
+                <button class="button">Explore More</button>
             </div>
             <div class="banner-img">
                 <img src="images/banner.png" alt="banner image" height="250px">
             </div>
         </div>
     </section>
+<!--Banner Section Ends-->
 
-    
+
 </body>
 </html>
