--- a/index.html
+++ b/index.html
@@ -42,7 +42,26 @@
         </div>
     </section>
 <!--Banner Section Ends-->
+<!--About Us Section-->
+    <section class="pad">
+        <div class="bmg">
+        <h1 style="text-align: center; font-size: 45px;">About Us</h1>
+        <div class="about-us-container">
+            <div class="us-img">
+                <img src="images/section.png" alt="Section" height="350px">
+            </div>
+            <div class="us-info">
+                <h1 style= "font-size: 29px;">We grow brands through <br> bold & strategic creative</h1>
+                <p style="font-size: 18px">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p style="font-size: 18px">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <button class="button">Contact with us</button>
+            </div>
 
+
+        </div>
+    </div>
+
+    </section>
 
 </body>
 </html>
