--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <p style="font-size: 18px">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
                 <button class="button">Contact with us</button>
             </div>
-
-
         </div>
     </div>
-
     </section>
+<!-- About Us Section Ends-->
+
+
 
 </body>
 </html>
