--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     </section>
 <!--Banner Section Ends-->
 <!--About Us Section-->
-    <section class="pad">
+    <section >
         <div class="bmg">
-        <h1 style="text-align: center; font-size: 45px;">About Us</h1>
+            
+        <h1 style="text-align: center; font-size: 40px;">About Us</h1>
         <div class="about-us-container">
             <div class="us-img">
                 <img src="images/section.png" alt="Section" height="350px">
@@ -60,6 +61,36 @@
     </div>
     </section>
 <!-- About Us Section Ends-->
+<!--Service Section Starts-->
+    <div class="bmg1">
+        <br> 
+        <h1 style="text-align: center;">Our Services</h1>
+        <br>
+        <div class="service-box-container">
+            <div class="box">
+                <img src="icon/0.png" alt="icon" height="100px">
+                <h2>Digital Art</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quisquam illum earum magnam voluptates, quidem voluptatum consequatur dignissimos quaerat expedita.
+                </p>
+                <button class="button2">Read More</button>
+            </div>
+            <div class="box">
+                <img src="icon/0.png" alt="icon" height="100px">
+                <h2>Digital Art</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quisquam illum earum magnam voluptates, quidem voluptatum consequatur dignissimos quaerat expedita.
+                </p>
+                <button class="button2">Read More</button>
+            </div>
+            <div class="box">
+                <img src="icon/0.png" alt="icon" height="100px">
+                <h2>Digital Art</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quisquam illum earum magnam voluptates, quidem voluptatum consequatur dignissimos quaerat expedita.
+                </p>
+                <button class="button2">Read More</button>
+            </div>
+        </div>
+    </div>
+<!-- Service Section Ends-->
 
 
 
