--- a/index.html
+++ b/index.html
@@ -91,7 +91,48 @@
         </div>
     </div>
 <!-- Service Section Ends-->
+<!--Info Section Starts-->
+<footer class="footer1">
 
+<div class="info-div-container">
+    <div class="info-box1">
+        <img src="logo/logo-light.png" alt="logo" width="200px">
+        <p>Lorem ipsum dolor sit amet consectetur, <br> adipisicing elit. Error voluptatibus doloribus <br> dicta nemo. Quae!</p>
+    </div>
+
+    <div class="info-box">
+        <h2>Useful Links</h2>
+        <br>
+        <p>About Us</p>
+        <p>Careers</p>
+        <p>News & Articles</p>
+        <p>Legal Notice</p>    
+    </div>
+    <div class="info-box">
+        <h2>Supports</h2>
+        <br>
+        <p>Help Center</p>
+        <p>Contact Us</p>
+        <p>FAQ</p>
+        <p>Parent Community</p> 
+    </div>
+    <div class="info-box">
+        <h2>Contact Information</h2>
+        <br>
+        <p>Feel Free to contact and Reach Us!!</p>
+        <p>3557 Derek Drive, Orlando, Florida</p>
+        <p>+1(456)657-887</p>
+        <p>info@domain.com</p> 
+    </div>
+</div>
+<hr width="1500px">
+<p style="color: white; text-align: center; font-size: small;">Copyright &#169; 2023. Created By Alif Hossain </p>
+
+</Footer>
+
+
+
+<!--Info Section ends-->
 
 
 
